--- a/views/noauth.handlebars
+++ b/views/noauth.handlebars
@@ -1,6 +1,9 @@
-{{!-- You may replace "your org" with the name of your organization. --}}
-<h2>Please enter your org's password:</h2>
+<h1>SamuelOS</h1>
+<hr />
+<h2>Please enter your organization password:</h2>
 <form action="/">
 	<input type="password" name="pass" />
 	<input type="submit" />
 </form>
+<hr />
+<p>Powered by SamuelOS</p>
