--- a/views/noauth.handlebars
+++ b/views/noauth.handlebars
@@ -1,9 +1,14 @@
+<style>
+	body {
+		background-image: url('{{wallpaper}}');
+	}
+</style>
 <h1>SamuelOS</h1>
 <hr />
-<h2>Please enter your organization password:</h2>
+<h2>Log In:</h2>
 <form action="/">
 	<input type="password" name="pass" />
 	<input type="submit" />
 </form>
 <hr />
-<p>Powered by SamuelOS</p>
+<p class="attr">SamuelOS 1.2 Underground</p>
