--- a/views/file.handlebars
+++ b/views/file.handlebars
@@ -6,7 +6,7 @@
 <script>
 	ace.config.set('basePath', 'https://pagecdn.io/lib/ace/1.4.12/');
 	var editor = ace.edit("editor");
-  editor.setTheme("ace/theme/monokai");
+  editor.setTheme("ace/theme/{{theme}}");
 	var modelist = ace.require("ace/ext/modelist");
 	var filePath = window.location.href.replace("http://", "").replace("https://", "").split("/")[1];
 	var mode = modelist.getModeForPath(filePath).mode;
