--- a/views/app/roll.handlebars
+++ b/views/app/roll.handlebars
@@ -1,1 +1,1 @@
-<iframe src="https://sclub.samuelsharp.com/game" />
+<iframe src="https://sclub.samuelsharp.com/game" allowfullscreen mozallowfullscreen />
