--- a/views/layouts/editor.handlebars
+++ b/views/layouts/editor.handlebars
@@ -15,8 +15,23 @@
 			left: 0
 		}
 
+		* {
+			cursor: default;
+		}
+
+		a.ic {
+			color: #f9461c;
+			background-color: black;
+			padding: 5px;
+			border-radius: 5px;
+		}
+
 		h1, h2, h3, input, button, p {
 			font-family: 'Poppins', sans-serif;
+		}
+
+		h1, h2, h3, p {
+			color: white;
 		}
 		
 		body {
