New icons, file downloads

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,7 +6,7 @@
 <h1>SamuelOS</h1>
 <hr />
 <br />
-<img src="/file.svg" />
+<img src="/folder.svg" />
 {{#each files}}
 	<a class="ic" ondblclick="window.open('/folder/{{this}}/?pass={{../pass}}', 'SamuelOS - {{this}}', 'width=800px,height=720px');">{{this}}</a>
 {{/each}}
