--- a/views/layouts/editor.handlebars
+++ b/views/layouts/editor.handlebars
@@ -24,6 +24,7 @@
 			background-color: black;
 			padding: 5px;
 			border-radius: 5px;
+			text-decoration: none;
 		}
 
 		h1, h2, h3, input, button, p {
