--- a/views/noauth.handlebars
+++ b/views/noauth.handlebars
@@ -3,7 +3,7 @@
 		background-image: url('{{wallpaper}}');
 	}
 </style>
-<h1>SamuelOS</h1>
+<h1 style="font-size:70px;">SamuelOS</h1>
 <hr />
 <h2>Log In:</h2>
 <form action="/">
