--- a/views/layouts/editor.handlebars
+++ b/views/layouts/editor.handlebars
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
+	<link rel="manifest" href="/manifest.json" />
+	<link rel="icon" href="/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
