--- a/static/index.css
+++ b/static/index.css
@@ -4,8 +4,7 @@ body {
 	background-color: black;
 	color: #f9461c;
 	text-align: center;
-	background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: cover;
 }
 
 a.ic {
