--- a/views/file.handlebars
+++ b/views/file.handlebars
@@ -1,6 +1,4 @@
-<div id="editor">
-	{{{content}}}
-</div>
+<div id="editor">{{{content}}}</div>
 <script src="https://pagecdn.io/lib/ace/1.4.12/ace.min.js"></script>
 <script src="https://pagecdn.io/lib/ace/1.4.12/ext-modelist.js"></script>
 <script>
