--- a/views/listing.handlebars
+++ b/views/listing.handlebars
@@ -17,6 +17,12 @@
 	<input name="filename" placeholder="Create a file..." required />
 	<input type="submit" style="color:black;" />
 </form>
+<form action="/api/delete">
+	<input type="hidden" name="pass" value="{{pass}}" />
+	<input type="hidden" name="folder" value="{{folder}}" />
+	<input name="filename" placeholder="Delete a file..." required />
+	<input type="submit" style="color:black;" />
+</form>
 <form action="/api/upload?pass={{pass}}&folder={{folder}}" method="post" enctype="multipart/form-data">
   <input type="file" name="file" required />
   <input type="submit" />
